Fixed signup collapse

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -409,7 +409,7 @@ hr{
   }
 }
 
-@media (min-width: 918px){
+@media (min-width: 935px){
   .btn-signup.btn-success{
     display:block;
   }
